# sdk

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitleaksignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CREDITS.md  Capsula do Tempo  LICENSE  Makefile.am  Makefile.win32  Package.swift  README.md  SC_STREAMING_IMPLEMENTATION.md  SECURITYDOWNLOADKNOWLEDGE.md  autogen.sh  check-clang-format.sh  clean.sh  config.txt  configure.ac  libmega.pc.in  megaclient.cpp  megaclient.h  sccr_config  test_integration  test_integration.cpp  vcpkg.json  windows编译日志.txt
bindings/go/: .gitignore  CMakeLists.txt  errors.c  fix.sh  go.mod  include.am  main.go  package.go  test_libmega.go
bindings/java/: .gitignore  CMakeLists.txt  include.am  megaapi_wrap.cpp  megaapi_wrap.h
bindings/php/: .gitignore  CMakeLists.txt  README.md  include.am  megaapi.php
bindings/python/: .gitignore  CMakeLists.txt  DESCRIPTION.rst  MANIFEST.in  README.md  __init__.py  include.am  megawrap.html  megawrap.py  setup.py  test_libmega.py
contrib/cmake/: 3rdparty_deps.txt  3rdparty_deps_osx.txt  CMakeLists.txt  FindFreeImage.cmake  build3rdparty.bash  build3rdparty.cmd  build3rdparty_chat.cmd  build_from_scratch.cmake  config.h.in  fullBuildFromScratchOnWindows.cmd  load_sdk_version.cmake  pdfium-CMakeLists.txt  preferred-ports-latest.txt  preferred-ports-megacmd.txt  preferred-ports-megasync.txt  preferred-ports-sdk.txt  preferred-ports.txt  target_sources_conditional.cmake
examples/: CMakeLists.txt  actionpacket_streaming_example.cpp  actionpacket_streaming_examples.cpp  fsevents_loader_megacli_maconly.cpp  include.am  megacli.cpp  megacli.cpp.orig  megacli.h  megacmd.cpp  megacmd.h  megasimplesync.cpp  megasync  megasync.cpp
examples/ActionPackets/: ActionPacketParser.cpp  ActionPacketParser.h  CMakeLists.txt  testActionPacketParser.cpp
examples/Swift/: .gitignore  README.md
examples/SwiftUI/: .gitignore
examples/android/: README.md
examples/go/: go.mod  main.go  prep.sh
examples/iOS/: .gitignore  README.md
examples/java/: .gitignore  README.md  logging.properties
examples/linux/: README.md  megafuse.cpp
examples/megacli/: CMakeLists.txt  megacli.cpp  megacli.h
examples/megacmd/: README.md  clientsocket.py  comunicationsmanager.cpp  comunicationsmanager.h  comunicationsmanagerfilesockets.cpp  comunicationsmanagerfilesockets.h  comunicationsmanagernamedpipes.cpp  comunicationsmanagernamedpipes.h  comunicationsmanagerportsockets.cpp  comunicationsmanagerportsockets.h  configurationmanager.cpp  configurationmanager.h  listeners.cpp  listeners.h  megacmd.cpp  megacmd.h  megacmdexecuter.cpp  megacmdexecuter.h  megacmdlogger.cpp  megacmdlogger.h  megacmdplatform.h  megacmdplatform.mm  megacmdutils.cpp  megacmdutils.h  megacmdversion.h  synchronousrequestlistener.cpp  synchronousrequestlistener.h
examples/php/: .gitignore  README.md  composer.json  megacli.php
examples/python/: README.md  crud_example.py  crud_example2.py  crud_example3.py  megacli.py  megacliwrapper.py
examples/simple_client/: .gitignore  CMakeLists.txt  README.md  increment_packet_unit_test.cpp  increment_packet_unit_test.h  simple_client.cpp  test_readme.docx
examples/win32/: .gitignore  MEGA.sln  README.md  libmega.vcxproj  libmega.vcxproj.filters
examples/wp8/: .gitmodules  README.md
gfxworker/src/: CMakeLists.txt  arguments.cpp  client.cpp  command_serializer.cpp  comms_server_win32.cpp  comms_server_win32.h  comms_win32.cpp  gfxworker_main.cpp  logger.cpp  main.cpp  megaproxytasks.cpp  processor.cpp  processor.h  server.cpp  server.h  tasks.cpp  threadpool.cpp  threadpool.h  utils.cpp
gfxworker/tests/: CMakeLists.txt  arguments_test.cpp  commands_test.cpp  comms_win32_test.cpp  misc_test.cpp  server_client_test.cpp  test_unit_main.cpp
include/: Makefile.am  mega.h  megaapi.h  megaapi_impl.h  megaclient.h  megaclient_private.h  megautils.h  version.h  volumewatcher.h
include/crypto/: cryptopp.h
include/impl/: share.h
include/mega/: account.h  action_packet_parser.h  actionpacket.h  actionpacketparser.h  arguments.h  attrmap.h  auto_file_handle.h  autocomplete.h  backofftimer.h  banner.h  base64.h  canceller.h  clock.h  command.h  commands.h  config-android.h  config.h.in  console.h  db.h  dns_lookup_pseudomessage.h  driveinfocollector.h  drivenotify.h  file.h  file_smart_upload.h  fileattributefetch.h  filefingerprint.h  filesystem.h  filter.h  gfx.h  hashcash.h  heartbeats.h  http.h  increment_packet.h  json.h  localpath.h  log_level.h  log_level_forward.h  logging.h  mediafileattribute.h  mega_ccronexpr.h  (+66 more)
src/common/: CMakeLists.txt  activity_monitor.cpp  bind_handle.cpp  client.cpp  client_adapter.cpp  client_adapter_with_sync.cpp  client_adapter_without_sync.cpp  database.cpp  database_builder.cpp  date_time.cpp  directory.cpp  logger.cpp  node_event_type.cpp  normalized_path.cpp  pending_callbacks.cpp  query.cpp  scoped_query.cpp  shared_mutex.cpp  subsystem_logger.cpp  task_executor.cpp  task_queue.cpp  transaction.cpp  upload.cpp  utility.cpp
src/file_service/: CMakeLists.txt  buffer.cpp  construction_logger.cpp  database_builder.cpp  destruction_logger.cpp  displaced_buffer.cpp  file.cpp  file_access.cpp  file_buffer.cpp  file_context.cpp  file_event_emitter.cpp  file_id.cpp  file_info.cpp  file_info_context.cpp  file_range.cpp  file_range_context.cpp  file_read_request_set.cpp  file_read_write_state.cpp  file_result.cpp  logger.cpp  (+7 more)
tests/: CMakeLists.txt  README.md  commands_test.cpp  compare_ops_in_two_folders.sh  crypto_test.cpp  gtest_common.cpp  gtest_common.h  gtestcommon.cpp  gtestcommon.h  include.am  lorem.txt  megaapi_test.cpp  megacmd_find_test.sh  megacmd_get_test.sh  megacmd_put_test.sh  megacmd_rm_test.sh  paycrypt_test.cpp  purge_account.cpp  sdk_test.cpp  sdk_test.h  sdk_test_data_provider.cpp  sdk_test_data_provider.h  sdk_test_utils.cpp  sdk_test_utils.h  sdktests.cpp  stdfs.h  sync_stress.py  sync_test.py  sync_test_app.py  sync_test_base.py  sync_test_megacli.py  sync_test_megasync.py  synctests.cpp  test_actionpacket_streaming.cpp  tests.cpp  unicode_filenames.py
(+2861 files in other folders)
